# openreplay-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agent_demo.py
openreplay_ai/: __init__.py  cli.py  server.py
openreplay_ai/core/: __init__.py  db.py  models.py  tracer.py
openreplay_ai/dashboard/: package-lock.json  package.json
openreplay_ai/dashboard/src/: App.jsx  index.css
